--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
       <div><img src="TY.png" alt="Ty" class="portrait-img"><p>Ty</p></div>
     </div>
     <div>
-      <img src="BUFFALO RIDGE 3.0.png" alt="Buffalo Ridge Logo" class="logo">
+      <img src="BUFFALO RIDGE LOGO 4.0.png" alt="Buffalo Ridge Logo" class="logo">
     </div>
     <div class="portrait-column">
       <div><img src="ROB.png" alt="Rob" class="portrait-img"><p>Rob</p></div>
