--- a/index.html
+++ b/index.html
@@ -4,323 +4,112 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Buffalo Ridge</title>
-
-  <!-- Typewriter Font -->
   <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
-
   <style>
-    body {
-      margin: 0;
-      background-color: #000;
-      color: #fff;
-      font-family: 'Special Elite', monospace;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 1rem;
-      text-align: center;
-    }
+    /* Existing styles omitted for brevity */
 
-    .logo {
-      height: 400px;
-      width: auto;
-      max-width: 90vw;
-      animation: flickerLogo 3.2s infinite;
-      filter: grayscale(100%);
-    }
-
-    .portrait-img {
-      height: 200px;
-      width: auto;
-      border-radius: 8px;
-      filter: grayscale(100%);
-      transition: all 0.4s ease;
-      box-shadow: 0 0 12px rgba(0, 0, 0, 0.7);
-      animation: flicker 2.7s infinite;
-    }
-
-    @keyframes flicker {
-      0%, 19%, 22%, 62%, 64%, 100% { opacity: 1; }
-      20%, 21%, 63% { opacity: 0.4; }
-      23% { opacity: 0.8; }
-      65% { opacity: 0.3; }
-    }
-
-    @keyframes flickerLogo {
-      0%, 5%, 9%, 14%, 20%, 100% { opacity: 1; }
-      6%, 10%, 13%, 15% { opacity: 0.5; }
-      16%, 19% { opacity: 0.2; }
-    }
-
-    .portrait-wrapper {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 2rem;
-      flex-wrap: wrap;
-      margin-bottom: 2rem;
-    }
-
-    .portrait-column {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 1rem;
-    }
-
-    @media (max-width: 768px) {
-      .portrait-wrapper {
-        flex-direction: column;
-        align-items: center;
-      }
-
-      .portrait-column {
-        display: none;
-      }
-
-      .portrait-row-mobile {
-        display: flex;
-        justify-content: center;
-        gap: 1rem;
-        flex-wrap: nowrap;
-        margin-top: 1rem;
-        margin-bottom: 1.5rem;
-        max-width: 90vw;
-      }
-
-      .mobile-profile {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-      }
-
-      .portrait-img-mobile {
-        height: 80px;
-        width: auto;
-        border-radius: 6px;
-        filter: grayscale(100%);
-        animation: flicker 2.4s infinite;
-        transition: all 0.4s ease;
-        flex-shrink: 1;
-      }
-
-      .portrait-img-mobile:hover {
-        filter: grayscale(0%) brightness(1.1);
-        transform: scale(1.05);
-      }
-
-      .logo {
-        height: 300px;
-      }
-    }
-
-    p {
-      font-size: 1.2em;
-      max-width: 700px;
-      margin: 0 auto 1rem;
-    }
-
-    .button-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 20px;
-      width: 100%;
-      max-width: 800px;
-      margin: 1.5rem 0;
-    }
-
-    .ridge-link {
-      text-decoration: none;
-    }
-
-    .ridge-button {
+    .bio-popup {
+      display: none;
+      position: absolute;
       background-color: #111;
       color: #eee;
-      border: 3px solid #444;
-      border-radius: 6px;
-      padding: 20px 10px;
-      font-size: 1.3em;
-      text-transform: uppercase;
-      letter-spacing: 1px;
-      text-shadow: 1px 1px 2px black;
-      box-shadow: 0 0 10px #000;
-      transition: background 0.3s, transform 0.2s;
-      cursor: pointer;
-    }
-
-    .ridge-button:hover {
-      background-color: #222;
-      transform: scale(1.05);
-    }
-
-    .section {
-      margin-top: 2rem;
-      max-width: 700px;
-      width: 100%;
-    }
-
-    iframe, audio {
-      width: 100%;
-      margin-top: 1rem;
-      border: none;
-    }
-
-    input, textarea, button {
-      font-family: 'Special Elite', monospace;
-      padding: 10px;
-      margin: 10px 0;
-      width: 100%;
-      max-width: 100%;
-      box-sizing: border-box;
+      padding: 1rem;
       border: 2px solid #444;
-      background-color: #111;
-      color: #fff;
+      border-radius: 6px;
+      width: 250px;
+      z-index: 1000;
+      text-align: left;
+      font-size: 0.9rem;
+      box-shadow: 0 0 10px black;
     }
 
-    button {
+    .mobile-modal {
+      display: none;
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.9);
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      z-index: 2000;
+    }
+
+    .mobile-modal img {
+      max-height: 50vh;
+      margin-bottom: 1rem;
+    }
+
+    .mobile-modal p {
+      max-width: 80%;
+      font-size: 1rem;
+    }
+
+    .mobile-modal button {
+      margin-top: 1rem;
+      background-color: #444;
+      color: white;
+      border: none;
+      padding: 0.5rem 1rem;
+      font-size: 1rem;
       cursor: pointer;
-      background-color: #333;
-      border-radius: 4px;
-      transition: background 0.3s;
-    }
-
-    button:hover {
-      background-color: #555;
     }
   </style>
 </head>
 <body>
+  <!-- Existing content above -->
 
-  <!-- Background Hum with Autoplay Fix -->
-  <audio id="bg-audio" src="sounds/creepy_background_hum_with_whispers.mp3" autoplay loop muted hidden></audio>
+  <!-- Add this immediately inside <body> -->
+  <div id="bio-popup" class="bio-popup"></div>
+  <div id="mobileModal" class="mobile-modal">
+    <img id="modalImg" src="" alt="">
+    <p id="modalBio"></p>
+    <button onclick="closeModal()">Close</button>
+  </div>
+
+  <!-- Existing scripts -->
   <script>
-    window.addEventListener('click', function enableAudio() {
-      const audio = document.getElementById('bg-audio');
-      audio.muted = false;
-      audio.play().catch(e => console.log('Playback error:', e));
-      window.removeEventListener('click', enableAudio);
-    });
-  </script>
+    const bios = {
+      "Drew": "Since his days at Oak Hills High school, Drew has felt challenged to prove/disprove anything difficult to explain. A natural investigator, he also enjoys fishing (novice level at best... poser) and being a “Griefer” on GTA V.",
+      "Rob": "Experiences on Buffalo Ridge as a young man coupled with 15 years of witnessing unexplained phenomena in Bars and clubs (he has a staunch belief that ghosts and entities are drawn to gathering places) has driven his curiosity. Unfortunately, curiosity does not equal courage... he’s kind of the team chicken shit.",
+      "Ty": "The youngest member of the team is also the 3rd of our Oak Hills graduates (Cincinnati’s West Side... Wes-wes yo!) Ty is the research expert for the podcast as well as a founding member of O.H. S.H.I.T.. Just don’t ask him what he’d do for obscene amounts of money... you don’t wanna know.",
+      "Steven": "The Genious of the bunch. The resident IT expert on the Ridge, the team would have a hard time getting on the internet without this cat. Just don’t give him your online passwords or you’ll end up married to a Tai mail order bride looking for U.S. residency. He’s sneaky like that..."
+    };
 
-  <!-- Portrait and Logo Layout (Desktop) -->
-  <div class="portrait-wrapper">
-    <div class="portrait-column">
-      <div><img src="DREW.png" alt="Drew" class="portrait-img"><p>Drew</p></div>
-      <div><img src="TY.png" alt="Ty" class="portrait-img"><p>Ty</p></div>
-    </div>
-    <div>
-      <img src="BUFFALO RIDGE LOGO 4.0.png" alt="Buffalo Ridge Logo" class="logo">
-    </div>
-    <div class="portrait-column">
-      <div><img src="ROB.png" alt="Rob" class="portrait-img"><p>Rob</p></div>
-      <div><img src="STEVEN.png" alt="Steven" class="portrait-img"><p>Steven</p></div>
-    </div>
-  </div>
-
-  <!-- Portraits on Mobile (Name Above Image) -->
-  <div class="portrait-row-mobile" style="display:none;">
-    <div class="mobile-profile">
-      <p>Drew</p>
-      <img src="DREW.png" alt="Drew" class="portrait-img-mobile">
-    </div>
-    <div class="mobile-profile">
-      <p>Rob</p>
-      <img src="ROB.png" alt="Rob" class="portrait-img-mobile">
-    </div>
-    <div class="mobile-profile">
-      <p>Steven</p>
-      <img src="STEVEN.png" alt="Steven" class="portrait-img-mobile">
-    </div>
-    <div class="mobile-profile">
-      <p>Ty</p>
-      <img src="TY.png" alt="Ty" class="portrait-img-mobile">
-    </div>
-  </div>
-
-  <!-- Description -->
-  <p>New episodes every Thursday... Buffalo Ridge is your source for chilling stories, strange events, and voices.</p>
-  <p><strong>Right here from up on the Ridge.</strong></p>
-
-  <!-- Button Grid -->
-  <div class="button-grid">
-    <a href="https://open.spotify.com/show/4iG0SrMt0ATU8rqnAcWy3e" target="_blank" class="ridge-link"><div class="ridge-button">Spotify</div></a>
-    <a href="https://www.youtube.com/channel/UCHDjvZvemkFoVgsXagJYShw" target="_blank" class="ridge-link"><div class="ridge-button">YouTube</div></a>
-    <div class="ridge-link"><div class="ridge-button" onclick="toggleSounds()">Sounds</div></div>
-    <a href="https://youtu.be/HRAJbOmm6Lk?si=sgOuRF0foGBzJJxU" target="_blank" class="ridge-link"><div class="ridge-button">About</div></a>
-    <a href="https://www.facebook.com/photo/?fbid=122102987132919073&set=a.122102987318919073" target="_blank" class="ridge-link"><div class="ridge-button">Touch Ty's Weener</div></a>
-    <a href="mailto:rob.auburnviewmedia@gmail.com" class="ridge-link"><div class="ridge-button">Email Us</div></a>
-  </div>
-
-  <!-- Sound Bites -->
-  <div id="sound-section" class="section" style="display: none;">
-    <h2>Sound Bites</h2>
-    <div class="button-grid">
-      <button onclick="playSound('sound1')">DID YOU SEE THAT</button>
-      <button onclick="playSound('sound2')">D in my B</button>
-      <button onclick="playSound('sound3')">GUN SWIM</button>
-    </div>
-    <audio id="sound1" src="sounds/DID YOU SEE THAT.mp3"></audio>
-    <audio id="sound2" src="sounds/D in my B.mp3"></audio>
-    <audio id="sound3" src="sounds/GUN SWIM.mp3"></audio>
-  </div>
-
-  <!-- Latest Episode Video -->
-  <div class="section">
-    <h2>Watch the Latest Episode</h2>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/ARvMdWtVNgQ?si=r9ZAtTNNZaGYOEsF" allowfullscreen></iframe>
-  </div>
-
-  <!-- Latest Audio -->
-  <div class="section">
-    <h2>Listen to the Latest Episode</h2>
-    <audio controls>
-      <source src="your-latest-episode.mp3" type="audio/mpeg">
-      Your browser does not support the audio element.
-    </audio>
-  </div>
-
-  <!-- Newsletter Signup -->
-  <div class="section">
-    <h2>Subscribe to Our Newsletter</h2>
-    <form action="mailto:your@email.com" method="post" enctype="text/plain">
-      <input type="text" name="name" placeholder="Your name" required>
-      <input type="email" name="email" placeholder="Your email" required>
-      <button type="submit">Sign Up</button>
-    </form>
-  </div>
-
-  <!-- Comments -->
-  <div class="section">
-    <h2>Leave a Comment</h2>
-    <form action="#" method="post">
-      <textarea name="comment" rows="4" placeholder="Your thoughts..."></textarea>
-      <button type="submit">Submit</button>
-    </form>
-    <p style="font-size: 0.9em; opacity: 0.6;">(Comments won't be saved without a backend. Future upgrade!)</p>
-  </div>
-
-  <script>
-    function toggleSounds() {
-      const section = document.getElementById('sound-section');
-      section.style.display = section.style.display === 'none' ? 'block' : 'none';
-    }
-
-    function playSound(id) {
-      const sounds = document.querySelectorAll('audio');
-      sounds.forEach(audio => {
-        audio.pause();
-        audio.currentTime = 0;
+    // Desktop hover
+    const popup = document.getElementById('bio-popup');
+    document.querySelectorAll('.portrait-img').forEach(img => {
+      img.addEventListener('mouseenter', (e) => {
+        const name = img.alt;
+        popup.innerText = bios[name] || "";
+        popup.style.display = 'block';
+        const rect = img.getBoundingClientRect();
+        popup.style.top = (rect.bottom + window.scrollY + 5) + 'px';
+        popup.style.left = (rect.left + window.scrollX) + 'px';
       });
-      const selected = document.getElementById(id);
-      if (selected) selected.play();
-    }
-
-    window.addEventListener("load", () => {
-      if (window.innerWidth <= 768) {
-        document.querySelector(".portrait-row-mobile").style.display = "flex";
-      }
+      img.addEventListener('mouseleave', () => {
+        popup.style.display = 'none';
+      });
     });
-  </script>
 
+    // Mobile tap
+    const modal = document.getElementById('mobileModal');
+    const modalImg = document.getElementById('modalImg');
+    const modalBio = document.getElementById('modalBio');
+
+    document.querySelectorAll('.portrait-img-mobile').forEach(img => {
+      img.addEventListener('click', () => {
+        const name = img.alt;
+        modalImg.src = img.src;
+        modalImg.alt = name;
+        modalBio.innerText = bios[name] || "";
+        modal.style.display = 'flex';
+      });
+    });
+
+    function closeModal() {
+      modal.style.display = 'none';
+    }
+  </script>
 </body>
 </html>
