--- a/index.html
+++ b/index.html
@@ -92,6 +92,46 @@
       align-items: center;
       gap: 1rem;
     }
+    .ridge-button {
+      background-color: #111;
+      color: #eee;
+      border: 3px solid #444;
+      border-radius: 6px;
+      padding: 20px 10px;
+      font-size: 1.3em;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      text-shadow: 1px 1px 2px black;
+      box-shadow: 0 0 10px #000;
+      transition: background 0.3s, transform 0.2s;
+      cursor: pointer;
+    }
+    .ridge-button:hover {
+      background-color: #222;
+      transform: scale(1.05);
+    }
+    .button-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 20px;
+      width: 100%;
+      max-width: 800px;
+      margin: 1.5rem 0;
+    }
+    .ridge-link {
+      text-decoration: none;
+    }
+    @keyframes flicker {
+      0%, 19%, 22%, 62%, 64%, 100% { opacity: 1; }
+      20%, 21%, 63% { opacity: 0.4; }
+      23% { opacity: 0.8; }
+      65% { opacity: 0.3; }
+    }
+    @keyframes flickerLogo {
+      0%, 5%, 9%, 14%, 20%, 100% { opacity: 1; }
+      6%, 10%, 13%, 15% { opacity: 0.5; }
+      16%, 19% { opacity: 0.2; }
+    }
     @media (max-width: 768px) {
       .portrait-wrapper { display: none; }
       .portrait-row-mobile {
@@ -101,10 +141,6 @@
         flex-wrap: wrap;
         margin: 1rem 0;
       }
-    }
-    .ridge-button:hover {
-      background-color: #222;
-      transform: scale(1.05);
     }
   </style>
 </head>
