--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       animation: flickerLogo 3.2s infinite;
       filter: grayscale(100%);
     }
-    .portrait-img, .portrait-img-mobile {
+    .portrait-img {
       height: 200px;
       width: auto;
       border-radius: 8px;
@@ -36,6 +36,11 @@
     }
     .portrait-img-mobile {
       height: 80px;
+      border-radius: 6px;
+      filter: grayscale(100%);
+      cursor: pointer;
+      animation: flicker 2.7s infinite;
+      transition: all 0.4s ease;
     }
     .bio-tooltip {
       display: none;
@@ -141,163 +146,13 @@
         flex-wrap: wrap;
         margin: 1rem 0;
       }
+      .logo {
+        display: block;
+        height: 300px;
+        margin-bottom: 1rem;
+      }
     }
   </style>
 </head>
-<body>
-  <audio id="bg-audio" src="sounds/creepy_background_hum_with_whispers.mp3" autoplay loop muted hidden></audio>
-  <script>
-    window.addEventListener('click', function enableAudio() {
-      const audio = document.getElementById('bg-audio');
-      audio.muted = false;
-      audio.play().catch(e => console.log('Playback error:', e));
-      window.removeEventListener('click', enableAudio);
-    });
-  </script>
 
-  <div class="portrait-wrapper">
-    <div class="portrait-column">
-      <div><img src="DREW.png" alt="Drew" class="portrait-img"><p>Drew</p></div>
-      <div><img src="TY.png" alt="Ty" class="portrait-img"><p>Ty</p></div>
-    </div>
-    <div>
-      <img src="BUFFALO RIDGE LOGO 4.0.png" alt="Buffalo Ridge Logo" class="logo">
-    </div>
-    <div class="portrait-column">
-      <div><img src="ROB.png" alt="Rob" class="portrait-img"><p>Rob</p></div>
-      <div><img src="STEVEN.png" alt="Steven" class="portrait-img"><p>Steven</p></div>
-    </div>
-  </div>
-
-  <div class="portrait-row-mobile">
-    <div class="mobile-profile"><p>Drew</p><img src="DREW.png" alt="Drew" class="portrait-img-mobile"></div>
-    <div class="mobile-profile"><p>Rob</p><img src="ROB.png" alt="Rob" class="portrait-img-mobile"></div>
-    <div class="mobile-profile"><p>Steven</p><img src="STEVEN.png" alt="Steven" class="portrait-img-mobile"></div>
-    <div class="mobile-profile"><p>Ty</p><img src="TY.png" alt="Ty" class="portrait-img-mobile"></div>
-  </div>
-
-  <div id="bio-tooltip" class="bio-tooltip"></div>
-  <div id="bio-modal" class="mobile-modal">
-    <img id="modal-img" src="" alt="">
-    <p id="modal-text"></p>
-    <button onclick="hideModal()">Close</button>
-  </div>
-
-  <p>New episodes every Thursday... Buffalo Ridge is your source for chilling stories, strange events, and voices.</p>
-  <p><strong>Right here from up on the Ridge.</strong></p>
-
-  <div class="button-grid">
-    <a href="https://open.spotify.com/show/4iG0SrMt0ATU8rqnAcWy3e" target="_blank" class="ridge-link"><div class="ridge-button">Spotify</div></a>
-    <a href="https://www.youtube.com/channel/UCHDjvZvemkFoVgsXagJYShw" target="_blank" class="ridge-link"><div class="ridge-button">YouTube</div></a>
-    <div class="ridge-link"><div class="ridge-button" onclick="toggleSounds()">Sounds</div></div>
-    <a href="https://youtu.be/HRAJbOmm6Lk?si=sgOuRF0foGBzJJxU" target="_blank" class="ridge-link"><div class="ridge-button">About</div></a>
-    <a href="https://www.facebook.com/photo/?fbid=122102987132919073&set=a.122102987318919073" target="_blank" class="ridge-link"><div class="ridge-button">Touch Ty's Weener</div></a>
-    <a href="mailto:rob.auburnviewmedia@gmail.com" class="ridge-link"><div class="ridge-button">Email Us</div></a>
-  </div>
-
-  <div id="sound-section" class="section" style="display: none;">
-    <h2>Sound Bites</h2>
-    <div class="button-grid">
-      <button onclick="playSound('sound1')">DID YOU SEE THAT</button>
-      <button onclick="playSound('sound2')">D in my B</button>
-      <button onclick="playSound('sound3')">GUN SWIM</button>
-    </div>
-    <audio id="sound1" src="sounds/DID YOU SEE THAT.mp3"></audio>
-    <audio id="sound2" src="sounds/D in my B.mp3"></audio>
-    <audio id="sound3" src="sounds/GUN SWIM.mp3"></audio>
-  </div>
-
-  <div class="section">
-    <h2>Watch the Latest Episode</h2>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/ARvMdWtVNgQ?si=r9ZAtTNNZaGYOEsF" allowfullscreen></iframe>
-  </div>
-
-  <div class="section">
-    <h2>Listen to the Latest Episode</h2>
-    <audio controls>
-      <source src="your-latest-episode.mp3" type="audio/mpeg">
-      Your browser does not support the audio element.
-    </audio>
-  </div>
-
-  <div class="section">
-    <h2>Subscribe to Our Newsletter</h2>
-    <form action="mailto:your@email.com" method="post" enctype="text/plain">
-      <input type="text" name="name" placeholder="Your name" required>
-      <input type="email" name="email" placeholder="Your email" required>
-      <button type="submit">Sign Up</button>
-    </form>
-  </div>
-
-  <div class="section">
-    <h2>Leave a Comment</h2>
-    <form action="#" method="post">
-      <textarea name="comment" rows="4" placeholder="Your thoughts..."></textarea>
-      <button type="submit">Submit</button>
-    </form>
-    <p style="font-size: 0.9em; opacity: 0.6;">(Comments won't be saved without a backend. Future upgrade!)</p>
-  </div>
-
-  <script>
-    const bios = {
-      "Drew": "Since his days at Oak Hills High school, Drew has felt challenged to prove/disprove anything difficult to explain. A natural investigator, he also enjoys fishing (novice level at best... poser) and being a \"Griefer\" on GTA V.",
-      "Rob": "Experiences on Buffalo Ridge as a young man coupled with 15 years of witnessing unexplained phenomena in Bars and clubs (he has a staunch belief that ghosts and entities are drawn to gathering places) has driven his curiosity. Unfortunately, curiosity does not equal courage... he’s kind of the team chicken shit.",
-      "Ty": "The youngest member of the team is also the 3rd of our Oak Hills graduates (Cincinnati’s West Side... Wes-wes yo!) Ty is the research expert for the podcast as well as a founding member of O.H. S.H.I.T.. Just don’t ask him what he’d do for obscene amounts of money... you don’t wanna know.",
-      "Steven": "The Genious of the bunch. The resident IT expert on the Ridge, the team would have a hard time getting on the internet without this cat. Just don’t give him your online passwords or you’ll end up married to a Tai mail order bride looking for U.S. residency. He’s sneaky like that..."
-    };
-
-    function toggleSounds() {
-      const section = document.getElementById('sound-section');
-      section.style.display = section.style.display === 'none' ? 'block' : 'none';
-    }
-
-    function playSound(id) {
-      const sounds = document.querySelectorAll('audio');
-      sounds.forEach(audio => {
-        audio.pause();
-        audio.currentTime = 0;
-      });
-      const selected = document.getElementById(id);
-      if (selected) selected.play();
-    }
-
-    function showTooltip(e, name) {
-      const tooltip = document.getElementById('bio-tooltip');
-      tooltip.textContent = bios[name];
-      tooltip.style.display = 'block';
-      tooltip.style.left = e.pageX + 15 + 'px';
-      tooltip.style.top = e.pageY - 20 + 'px';
-    }
-
-    function hideTooltip() {
-      document.getElementById('bio-tooltip').style.display = 'none';
-    }
-
-    function showModal(name, imgSrc) {
-      document.getElementById('bio-modal').style.display = 'flex';
-      document.getElementById('modal-img').src = imgSrc;
-      document.getElementById('modal-img').alt = name;
-      document.getElementById('modal-text').textContent = bios[name];
-    }
-
-    function hideModal() {
-      document.getElementById('bio-modal').style.display = 'none';
-    }
-
-    window.addEventListener("load", () => {
-      if (window.innerWidth <= 768) {
-        document.querySelector(".portrait-row-mobile").style.display = "flex";
-      }
-
-      document.querySelectorAll('.portrait-img').forEach(img => {
-        img.addEventListener('mouseenter', (e) => showTooltip(e, img.alt));
-        img.addEventListener('mouseleave', hideTooltip);
-      });
-
-      document.querySelectorAll('.portrait-img-mobile').forEach(img => {
-        img.addEventListener('click', () => showModal(img.alt, img.src));
-      });
-    });
-  </script>
-</body>
-</html>
+  
