--- a/index.html
+++ b/index.html
@@ -17,31 +17,6 @@
       padding: 1rem;
       text-align: center;
     }
-    .logo {
-      height: 400px;
-      width: auto;
-      max-width: 90vw;
-      animation: flickerLogo 3.2s infinite;
-      filter: grayscale(100%);
-    }
-    .portrait-img {
-      height: 200px;
-      width: auto;
-      border-radius: 8px;
-      filter: grayscale(100%);
-      transition: all 0.4s ease;
-      box-shadow: 0 0 12px rgba(0, 0, 0, 0.7);
-      animation: flicker 2.7s infinite;
-      cursor: pointer;
-    }
-    .portrait-img-mobile {
-      height: 80px;
-      border-radius: 6px;
-      filter: grayscale(100%);
-      cursor: pointer;
-      animation: flicker 2.7s infinite;
-      transition: all 0.4s ease;
-    }
     .bio-tooltip {
       display: none;
       position: absolute;
@@ -82,77 +57,63 @@
       font-size: 1rem;
       cursor: pointer;
     }
-    .portrait-wrapper {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 2rem;
-      flex-wrap: wrap;
-      margin-bottom: 2rem;
-      position: relative;
-    }
-    .portrait-column {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 1rem;
-    }
-    .ridge-button {
-      background-color: #111;
-      color: #eee;
-      border: 3px solid #444;
-      border-radius: 6px;
-      padding: 20px 10px;
-      font-size: 1.3em;
-      text-transform: uppercase;
-      letter-spacing: 1px;
-      text-shadow: 1px 1px 2px black;
-      box-shadow: 0 0 10px #000;
-      transition: background 0.3s, transform 0.2s;
-      cursor: pointer;
-    }
-    .ridge-button:hover {
-      background-color: #222;
-      transform: scale(1.05);
-    }
-    .button-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 20px;
-      width: 100%;
-      max-width: 800px;
-      margin: 1.5rem 0;
-    }
-    .ridge-link {
-      text-decoration: none;
-    }
-    @keyframes flicker {
-      0%, 19%, 22%, 62%, 64%, 100% { opacity: 1; }
-      20%, 21%, 63% { opacity: 0.4; }
-      23% { opacity: 0.8; }
-      65% { opacity: 0.3; }
-    }
-    @keyframes flickerLogo {
-      0%, 5%, 9%, 14%, 20%, 100% { opacity: 1; }
-      6%, 10%, 13%, 15% { opacity: 0.5; }
-      16%, 19% { opacity: 0.2; }
-    }
-    @media (max-width: 768px) {
-      .portrait-wrapper { display: none; }
-      .portrait-row-mobile {
-        display: flex;
-        justify-content: center;
-        gap: 1rem;
-        flex-wrap: wrap;
-        margin: 1rem 0;
-      }
-      .logo {
-        display: block;
-        height: 300px;
-        margin-bottom: 1rem;
-      }
-    }
   </style>
 </head>
+<body>
+  <!-- Original content above remains untouched -->
 
-  
+  <!-- Bio tooltip for desktop -->
+  <div id="bio-tooltip" class="bio-tooltip"></div>
+
+  <!-- Modal for mobile -->
+  <div id="bio-modal" class="mobile-modal">
+    <img id="modal-img" src="" alt="">
+    <p id="modal-text"></p>
+    <button onclick="hideModal()">Close</button>
+  </div>
+
+  <script>
+    const bios = {
+      "Drew": "Since his days at Oak Hills High school, Drew has felt challenged to prove/disprove anything difficult to explain. The primary founding member of O.H. S.H.I.T. and a natural investigator, he also enjoys fishing (novice level at best... poser) and being a “Griefer” on GTA V.",
+      "Rob": "A founding member of O.H. S.H.I.T., his experiences on Buffalo Ridge as a young man coupled with 15 years of witnessing unexplained phenomena in Bars and clubs (he has a staunch belief that ghosts and entities are drawn to gathering places) has driven his curiosity. Unfortunately, curiosity does not equal courage... he’s kind of the team chicken shit.",
+      "Ty": "The youngest member of the team is also the 3rd of our Oak Hills graduates (Cincinnati’s West Side... Wes-wes yo!) Ty is the research expert for the podcast as well as a founding member of O.H. S.H.I.T.. Just don’t ask him what he’d do for obscene amounts of money... you don’t wanna know.",
+      "Steven": "The Genius of the bunch. The resident IT expert on the Ridge, the team would have a hard time getting on the internet without this cat. Just don’t give him your online passwords or you’ll end up married to a Tai mail order bride looking for U.S. residency. He’s sneaky like that..."
+    };
+
+    function showTooltip(e, name) {
+      const tooltip = document.getElementById('bio-tooltip');
+      tooltip.textContent = bios[name];
+      tooltip.style.display = 'block';
+      tooltip.style.left = e.pageX + 15 + 'px';
+      tooltip.style.top = e.pageY - 20 + 'px';
+    }
+
+    function hideTooltip() {
+      document.getElementById('bio-tooltip').style.display = 'none';
+    }
+
+    function showModal(name, imgSrc) {
+      const modal = document.getElementById('bio-modal');
+      document.getElementById('modal-img').src = imgSrc;
+      document.getElementById('modal-img').alt = name;
+      document.getElementById('modal-text').textContent = bios[name];
+      modal.style.display = 'flex';
+    }
+
+    function hideModal() {
+      document.getElementById('bio-modal').style.display = 'none';
+    }
+
+    window.addEventListener("load", () => {
+      document.querySelectorAll('.portrait-img').forEach(img => {
+        img.addEventListener('mouseenter', (e) => showTooltip(e, img.alt));
+        img.addEventListener('mouseleave', hideTooltip);
+      });
+
+      document.querySelectorAll('.portrait-img-mobile').forEach(img => {
+        img.addEventListener('click', () => showModal(img.alt, img.src));
+      });
+    });
+  </script>
+</body>
+</html>
