--- a/index.html
+++ b/index.html
@@ -17,6 +17,37 @@
       padding: 1rem;
       text-align: center;
     }
+    .logo {
+      height: 400px;
+      width: auto;
+      max-width: 90vw;
+      animation: flickerLogo 3.2s infinite;
+      filter: grayscale(100%);
+    }
+    .portrait-img {
+      height: 200px;
+      width: auto;
+      border-radius: 8px;
+      filter: grayscale(100%);
+      transition: all 0.4s ease;
+      box-shadow: 0 0 12px rgba(0, 0, 0, 0.7);
+      animation: flicker 2.7s infinite;
+      cursor: pointer;
+    }
+    .portrait-img-mobile {
+      height: 80px;
+      width: auto;
+      border-radius: 6px;
+      filter: grayscale(100%);
+      animation: flicker 2.4s infinite;
+      transition: all 0.4s ease;
+      flex-shrink: 1;
+      cursor: pointer;
+    }
+    .portrait-img-mobile:hover {
+      filter: grayscale(0%) brightness(1.1);
+      transform: scale(1.05);
+    }
     .bio-tooltip {
       display: none;
       position: absolute;
@@ -57,20 +88,102 @@
       font-size: 1rem;
       cursor: pointer;
     }
+    .portrait-wrapper {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 2rem;
+      flex-wrap: wrap;
+      margin-bottom: 2rem;
+      position: relative;
+    }
+    .portrait-column {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 1rem;
+    }
+    @media (max-width: 768px) {
+      .portrait-wrapper {
+        flex-direction: column;
+        align-items: center;
+      }
+      .portrait-column {
+        display: none;
+      }
+      .portrait-row-mobile {
+        display: flex;
+        justify-content: center;
+        gap: 1rem;
+        flex-wrap: nowrap;
+        margin-top: 1rem;
+        margin-bottom: 1.5rem;
+        max-width: 90vw;
+      }
+      .mobile-profile {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+      .logo {
+        height: 300px;
+      }
+    }
   </style>
 </head>
 <body>
-  <!-- Original content above remains untouched -->
+  <audio id="bg-audio" src="sounds/creepy_background_hum_with_whispers.mp3" autoplay loop muted hidden></audio>
+  <script>
+    window.addEventListener('click', function enableAudio() {
+      const audio = document.getElementById('bg-audio');
+      audio.muted = false;
+      audio.play().catch(e => console.log('Playback error:', e));
+      window.removeEventListener('click', enableAudio);
+    });
+  </script>
 
-  <!-- Bio tooltip for desktop -->
+  <div class="portrait-wrapper">
+    <div class="portrait-column">
+      <div><img src="DREW.png" alt="Drew" class="portrait-img"><p>Drew</p></div>
+      <div><img src="TY.png" alt="Ty" class="portrait-img"><p>Ty</p></div>
+    </div>
+    <div>
+      <img src="BUFFALO RIDGE LOGO 4.0.png" alt="Buffalo Ridge Logo" class="logo">
+    </div>
+    <div class="portrait-column">
+      <div><img src="ROB.png" alt="Rob" class="portrait-img"><p>Rob</p></div>
+      <div><img src="STEVEN.png" alt="Steven" class="portrait-img"><p>Steven</p></div>
+    </div>
+  </div>
+
+  <div class="portrait-row-mobile" style="display:none;">
+    <div class="mobile-profile">
+      <p>Drew</p>
+      <img src="DREW.png" alt="Drew" class="portrait-img-mobile">
+    </div>
+    <div class="mobile-profile">
+      <p>Rob</p>
+      <img src="ROB.png" alt="Rob" class="portrait-img-mobile">
+    </div>
+    <div class="mobile-profile">
+      <p>Steven</p>
+      <img src="STEVEN.png" alt="Steven" class="portrait-img-mobile">
+    </div>
+    <div class="mobile-profile">
+      <p>Ty</p>
+      <img src="TY.png" alt="Ty" class="portrait-img-mobile">
+    </div>
+  </div>
+
   <div id="bio-tooltip" class="bio-tooltip"></div>
-
-  <!-- Modal for mobile -->
   <div id="bio-modal" class="mobile-modal">
     <img id="modal-img" src="" alt="">
     <p id="modal-text"></p>
     <button onclick="hideModal()">Close</button>
   </div>
+
+  <p>New episodes every Thursday... Buffalo Ridge is your source for chilling stories, strange events, and voices.</p>
+  <p><strong>Right here from up on the Ridge.</strong></p>
 
   <script>
     const bios = {
@@ -105,6 +218,10 @@
     }
 
     window.addEventListener("load", () => {
+      if (window.innerWidth <= 768) {
+        document.querySelector(".portrait-row-mobile").style.display = "flex";
+      }
+
       document.querySelectorAll('.portrait-img').forEach(img => {
         img.addEventListener('mouseenter', (e) => showTooltip(e, img.alt));
         img.addEventListener('mouseleave', hideTooltip);
