--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
       filter: grayscale(100%);
       animation: flickerLogo 3.2s infinite;
     }
-
     .mobile-profile-row {
       display: flex;
       justify-content: space-between;
@@ -83,7 +82,6 @@
       filter: grayscale(100%);
       animation: flicker 2.4s infinite;
     }
-
     .bio-tooltip {
       display: none;
       position: absolute;
@@ -96,7 +94,6 @@
       z-index: 100;
       text-align: left;
     }
-
     .mobile-modal {
       display: none;
       position: fixed;
@@ -130,7 +127,7 @@
 </head>
 <body>
 
-<!-- Desktop Layout -->
+<!-- DESKTOP PROFILE LAYOUT (unchanged) -->
 <div class="portrait-wrapper">
   <div class="portrait-column">
     <div><img src="DREW.png" alt="Drew" class="portrait-img"><p>Drew</p></div>
@@ -145,7 +142,7 @@
   </div>
 </div>
 
-<!-- Mobile Row -->
+<!-- MOBILE: SINGLE HORIZONTAL ROW ONLY -->
 <div class="mobile-profile-row">
   <div class="mobile-profile"><p>Drew</p><img src="DREW.png" alt="Drew" class="portrait-img-mobile"></div>
   <div class="mobile-profile"><p>Rob</p><img src="ROB.png" alt="Rob" class="portrait-img-mobile"></div>
@@ -153,16 +150,13 @@
   <div class="mobile-profile"><p>Ty</p><img src="TY.png" alt="Ty" class="portrait-img-mobile"></div>
 </div>
 
-<!-- Bios -->
+<!-- BIO TOOLTIPS + MODAL -->
 <div id="bio-tooltip" class="bio-tooltip"></div>
 <div id="bio-modal" class="mobile-modal">
   <img id="modal-img" src="" alt="">
   <p id="modal-text"></p>
   <button onclick="hideModal()">Close</button>
 </div>
-
-</body>
-</html>
 <!-- Background Hum -->
 <audio id="bg-audio" src="sounds/creepy_background_hum_with_whispers.mp3" autoplay loop muted hidden></audio>
 <script>
@@ -197,13 +191,13 @@
   <audio id="sound3" src="sounds/GUN SWIM.mp3"></audio>
 </div>
 
-<!-- Latest Episode Video -->
+<!-- Video -->
 <div class="section">
   <h2>Watch the Latest Episode</h2>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/ARvMdWtVNgQ?si=r9ZAtTNNZaGYOEsF" allowfullscreen></iframe>
 </div>
 
-<!-- Latest Audio Episode -->
+<!-- Audio -->
 <div class="section">
   <h2>Listen to the Latest Episode</h2>
   <audio controls>
