--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       6%, 10%, 13%, 15% { opacity: 0.5; }
       16%, 19% { opacity: 0.2; }
     }
+
     .portrait-wrapper {
       display: flex;
       justify-content: center;
@@ -61,6 +62,20 @@
       filter: grayscale(100%);
       animation: flickerLogo 3.2s infinite;
     }
+
+    /* MOBILE ONLY */
+    @media (min-width: 768px) {
+      .mobile-profile-row {
+        display: none;
+      }
+    }
+
+    @media (max-width: 767px) {
+      .portrait-wrapper {
+        display: none;
+      }
+    }
+
     .mobile-profile-row {
       display: flex;
       justify-content: space-between;
@@ -82,6 +97,7 @@
       filter: grayscale(100%);
       animation: flicker 2.4s infinite;
     }
+
     .bio-tooltip {
       display: none;
       position: absolute;
@@ -94,6 +110,7 @@
       z-index: 100;
       text-align: left;
     }
+
     .mobile-modal {
       display: none;
       position: fixed;
@@ -127,7 +144,7 @@
 </head>
 <body>
 
-<!-- DESKTOP PROFILE LAYOUT (unchanged) -->
+<!-- DESKTOP: 2-left / logo / 2-right -->
 <div class="portrait-wrapper">
   <div class="portrait-column">
     <div><img src="DREW.png" alt="Drew" class="portrait-img"><p>Drew</p></div>
@@ -142,7 +159,7 @@
   </div>
 </div>
 
-<!-- MOBILE: SINGLE HORIZONTAL ROW ONLY -->
+<!-- MOBILE: single horizontal row -->
 <div class="mobile-profile-row">
   <div class="mobile-profile"><p>Drew</p><img src="DREW.png" alt="Drew" class="portrait-img-mobile"></div>
   <div class="mobile-profile"><p>Rob</p><img src="ROB.png" alt="Rob" class="portrait-img-mobile"></div>
@@ -150,7 +167,7 @@
   <div class="mobile-profile"><p>Ty</p><img src="TY.png" alt="Ty" class="portrait-img-mobile"></div>
 </div>
 
-<!-- BIO TOOLTIPS + MODAL -->
+<!-- BIOS -->
 <div id="bio-tooltip" class="bio-tooltip"></div>
 <div id="bio-modal" class="mobile-modal">
   <img id="modal-img" src="" alt="">
